# lightning-rod

./: pyproject.toml
examples/math/src/data/demo/functions/: main.mcfunction
examples/time/src/data/demo/functions/: main.mcfunction
examples/xp/src/data/demo/functions/: main.mcfunction
lightning_rod/: __init__.py
lightning_rod/modules/: gamemode.bolt  math.bolt  time.bolt  xp.bolt
tests/: test_examples.py
tests/snapshots/: examples__build_gamemode__0.pack.md  examples__build_kill__0.pack.md  examples__build_math__0.pack.md  examples__build_raw__0.pack.md  examples__build_time__0.pack.md  examples__build_xp__0.pack.md
