[project]
name = "lightning_rod"
version = "1.0.0"
description = "Function library for the Bolt scripting language."
authors = [{ name = "ArcticYeti", email = "arcticyeti1@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
keywords = [
    "beet",
    "bolt",
    "minecraft",
    "datapack",
    "minecraft-commands",
    "mcfunction",
    "library",
    "reapermc",
]
dependencies = [
    "beet>=0.110.1",
    "bolt>=0.49.1",
    "bolt-expressions>=0.17.0",
    "mecha>=0.98.1",
]

[project.urls]
Homepage = "https://github.com/reapermc/lightning-rod"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "lectern>=0.34.0",
    "pytest>=8.3.5",
    "pytest-insta>=0.3.0",
    "python-semantic-release>=10.0.2",
]


[tool.hatch.build.targets.sdist]
include = ["lightning_rod/py.typed"]

[tool.hatch.build.targets.wheel]
include = ["lightning_rod/py.typed"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "tests --import-mode=importlib"

[tool.pyright]
typeCheckingMode = "strict"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.semantic_release]
branch = "main"
version_variable = "lightning_rod/__init__.py:__version__"
version_toml = "pyproject.toml:.project.version"
major_on_zero = true
upload_to_repository = true
build_command = "uv build"
